// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Aspirin Integration Test parses aspirin 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Aspirin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'O']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'c', size: 6 });
export const v5 = Linear(['C', 'O']);
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(1, v6);
export const v8 = Molecule([v3, v4, v7]);"
`;

exports[`Ibuprofen Integration Test parses ibuprofen 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Ibuprofen Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'c', size: 6 });
export const v5 = Linear(['C', 'C', 'O']);
export const v6 = Linear(['C']);
export const v7 = v5.attach(1, v6);
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(2, v8);
export const v10 = Molecule([v3, v4, v9]);"
`;

exports[`Naproxen Integration Test parses naproxen 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "O",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "c",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "c",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Naproxen Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'O']);
export const v2 = Ring({ atoms: 'c', size: 6, branchDepths: [0, 0, 0, 0, 1, 1] });
export const v3 = Ring({ atoms: 'c', size: 6, ringNumber: 2, offset: 3, branchDepths: [0, 0, 0, 1, 1, 1] });
export const v4 = v2.fuse(3, v3);
v4.rings[0].metaPositions = [2, 3, 4, 5, 10, 11];
v4.rings[0].metaStart = 2;
v4.rings[0].metaEnd = 11;
v4.rings[1].metaPositions = [5, 6, 7, 8, 9, 10];
v4.rings[1].metaStart = 5;
v4.rings[1].metaEnd = 10;
v4.metaAllPositions = [2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
v4.metaBranchDepthMap = new Map([[2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 1], [9, 1], [10, 1], [11, 1]]);
v4.metaAtomValueMap = new Map([[2, 'c'], [3, 'c'], [4, 'c'], [5, 'c'], [6, 'c'], [7, 'c'], [8, 'c'], [9, 'c'], [10, 'c'], [11, 'c']]);
v4.metaRingOrderMap = new Map([[2, [1, 1]], [3, [1]], [4, [1]], [5, [2, 2, 1]], [6, [2]], [7, [2]], [8, [2]], [9, [2]], [10, [2, 1]], [11, [1]]]);
export const v5 = Linear(['C', 'C', 'O']);
export const v6 = Linear(['C']);
export const v7 = v5.attach(1, v6);
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(2, v8);
export const v10 = Molecule([v1, v4, v9]);"
`;

exports[`Ketoprofen Integration Test parses ketoprofen 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "2": [
      {
        "rings": [
          {
            "atoms": "c",
            "attachments": {},
            "bonds": [
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "offset": 0,
            "ringNumber": 1,
            "size": 6,
            "substitutions": {},
            "type": "ring",
          },
        ],
        "type": "fused_ring",
      },
    ],
    "3": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Ketoprofen Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'O']);
export const v2 = Ring({ atoms: 'c', size: 6 });
v2.metaUseInterleavedCodegen = true;
v2.metaPositions = [2, 3, 4, 5, 6, 7];
v2.metaStart = 2;
v2.metaEnd = 7;
export const v3 = Ring({ atoms: 'c', size: 6, ringNumber: 2 });
v3.metaPositions = [8, 9, 10, 11, 12, 13];
v3.metaStart = 8;
v3.metaEnd = 13;
v2.metaSequentialRings = [v3];
v2.metaAllPositions = [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13];
v2.metaBranchDepthMap = new Map([[2, 1], [3, 1], [4, 1], [5, 1], [6, 1], [7, 1], [8, 1], [9, 1], [10, 1], [11, 1], [12, 1], [13, 1]]);
v2.metaAtomValueMap = new Map([[2, 'c'], [3, 'c'], [4, 'c'], [5, 'c'], [6, 'c'], [7, 'c'], [8, 'c'], [9, 'c'], [10, 'c'], [11, 'c'], [12, 'c'], [13, 'c']]);
export const v4 = v1.attach(2, v2);
export const v5 = Linear(['O'], ['=']);
export const v6 = v4.attach(3, v5);"
`;

exports[`Diclofenac Integration Test parses diclofenac 1`] = `
{
  "components": [
    {
      "atoms": [
        "O",
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "N",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {
        "2": [
          {
            "atoms": [
              "Cl",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "Cl",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Diclofenac Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['O', 'C', 'C']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'c', size: 6 });
export const v5 = Linear(['N']);
export const v6 = Ring({ atoms: 'c', size: 6, ringNumber: 2 });
export const v7 = Linear(['Cl']);
export const v8 = v6.attach(2, v7);
export const v9 = Linear(['Cl']);
export const v10 = Molecule([v3, v4, v5, v8, v9]);"
`;
